# pidemo

./: CMakeLists.txt  README.md  pidemo.cpp
aip/: CMakeLists.txt  aip.cpp  aip.h
aip-cpp-sdk-0.7.4/: body_analysis.h  nlp.h
aip-cpp-sdk-0.7.4/base/: base.h
aip/aip-cpp-sdk-0.7.4/: face.h  image_search.h  speech.h
hpsocket/: helper.cpp  helper.h
pictl/: CMakeLists.txt  pictl.cpp  pictl.h
soundmanager/: CMakeLists.txt  soundmanager.cpp  soundmanager.h  soundpcm.cpp  soundpcm.h  soundpcmenums.cpp  soundpcmenums.h  soundpcmhwparams.cpp  soundpcmhwparams.h  soundplayer.cpp  soundplayer.h  soundrecorder.cpp  soundrecorder.h  soundrecordstream.cpp  soundrecordstream.h  soundstream.cpp  soundstream.h  soundwavstream.cpp  soundwavstream.h
